[Add] core constants and helpers

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/helper.php",
+            "app/Helpers/coreConstants.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
